# midlang

./: .coderabbit.yaml  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker.env  integration.mk
.github/workflows/: makefile.yml
compiler/: Cargo.toml
compiler/src/: lib.rs  type_check.rs
json_frontend/: Cargo.toml
json_frontend/src/: json_lang.rs  lib.rs  lower.rs  raise.rs
midlang/: Cargo.toml
midlang/src/: compiler.rs  errors.rs  lib.rs  middle_lang.rs  type_check.rs
mlc/: Cargo.toml
mlc/src/: main.rs
mtc/: Cargo.toml
mtc/src/: cmp.rs  cond.rs  hello_world.rs  lib.rs  math.rs  not.rs  snippets.rs
qbe_backend/: Cargo.toml
qbe_backend/src/: il.rs  lib.rs  lower.rs  lower_lang.rs  lowering_context.rs
test_cases/: include.mk
test_cases/json/: cmp.json  cond.json  fabs.json  frexp.json  hello_world.json  hello_world2.json  hello_world_cond.json  math.json  not.json
test_cases/qbe/: cmp.il  cond.il  fabs.il  frexp.il  hello_world.il  hello_world2.il  hello_world2_sayer.il  hello_world_cond.il  not.il
