[package]
name = "json_frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"]}
serde_json = "1"

compiler = { path = "../compiler" }
midlang = { path = "../midlang" }
mtc = { path = "../mtc" }
